[tool.poetry]
name = "hiroshi"
version = "0.2.3"
description = "Just a GPT4Free-based ChatGPT Telegram bot"
authors = ["Sergei Nagaev <nagaev.sv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
brotli = "^1.1.0"
g4f = "*"
loguru = "^0.7"
pydantic = {extras = ["dotenv"], version = "1.10.9"}
python-telegram-bot = {extras = ["job-queue"], version = "^21.0.1"}
redis = {extras = ["hiredis"], version = "5.0.1"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"

[tool.black]
line-length = 120
include = ".pyi?$"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
files = "**/*.py"
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
allow_untyped_calls = true
plugins = [ "pydantic.mypy" ]

[tool.flake8]
ignore = "E203,E266,H106,H904"
max-line-length = 120
exit-zero = true
exclude = " .git,__pycache__ "

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
